--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter'
 
     implementation 'org.jetbrains.kotlin:kotlin-reflect'
